--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">ExampleRecycleView</string>
     <string name="action_settings">Settings</string>
     <string name="title_event">Events</string>
+    <string name="todo">TODO</string>
 </resources>
